// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> should render a a menu item with a link 1`] = `
<MenuItemComponent
  href="www.google.com"
  label="Test menu item"
/>
`;

exports[`<MenuItem /> should render a menu item as a submenu if it has children 1`] = `
<Memo(Collapsible)
  isOpen={false}
  onToggle={[Function]}
  trigger={
    <MenuItemComponent
      href="www.google.com"
      icon={
        <Memo(IntelliIcon)
          icon="clock"
        />
      }
      isOpen={false}
      label="Father"
    />
  }
>
  <styled.span>
    <Memo(MenuItem)
      href="www.google.com"
      icon={
        <Memo(IntelliIcon)
          icon="clock"
        />
      }
      label="Son"
    />
    <Memo(MenuItem)
      href="www.google.com"
      icon={
        <Memo(IntelliIcon)
          icon="clock"
        />
      }
      label="Devil"
    />
  </styled.span>
</Memo(Collapsible)>
`;

exports[`<MenuItem /> should render a menu item with Icon 1`] = `
<MenuItemComponent
  href="www.google.com"
  icon={
    <Memo(IntelliIcon)
      icon="clock"
    />
  }
  label="Test menu item"
/>
`;

exports[`<MenuItem /> should render a menu item with active state 1`] = `
<MenuItemComponent
  href="www.google.com"
  isActive={true}
  label="Test menu item"
/>
`;

exports[`<MenuItem /> should render a menu item with loading state 1`] = `
<MenuItemComponent
  href="www.google.com"
  icon={
    <Memo(IntelliIcon)
      icon="clock"
    />
  }
  isLoading={true}
  label="Test menu item"
/>
`;

exports[`<MenuItem /> should render a simple menu item 1`] = `
<MenuItemComponent
  label="Test menu item"
/>
`;
